<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:text="@string/contact_email"
        android:textSize="14sp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:id="@+id/activity_contact_subject_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_string"
            android:inputType="text"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:text="@string/contact_message"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:id="@+id/activity_contact_message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_string"
            android:inputType="text|textAutoComplete|textMultiLine"
            android:textSize="14sp" />
        <Button
            android:id="@+id/activity_contact_button"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_string"
            android:textColor="@color/mycors_white"
            android:background="@drawable/my_buttons"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/phone_string"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/contact_phone_string"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/contact_email"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/support_eagle_string"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/location_contact_string"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/eaglecor_location_string"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/period_string"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:text="@string/eagle_cor_period_string"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
    android:id="@+id/activity_contact_progressBar"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:visibility="invisible"/>
</RelativeLayout>