<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPageActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="32sp"/>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/activity_start_page_map_btn"
                android:contentDescription="@string/map_string"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_station" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/map_string" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/activity_start_page_payment_btn"
                android:contentDescription="@string/payment_string"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_payment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/payment_string" />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/activity_start_page_station_btn"
                android:contentDescription="@string/cors_stations_string"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_button"
                android:src="@mipmap/ic_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/cors_stations_string" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/activity_start_page_contact_btn"
                android:contentDescription="@string/contact_us_string"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_button"
                android:src="@mipmap/ic_contact" />

            <TextView
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:text="@string/contact_us_string" />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/activity_start_page_review_btn"
                android:contentDescription="@string/review_string"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/review_string"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                tools:text="Bureau" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>