<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">
        <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/review_string"
        android:src="@drawable/ic_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/account_string"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="12sp"
            tools:text="Share your experience to help others" />

        <RatingBar
            android:id="@+id/activity_review_rating_bar"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1.0"
            android:theme="@style/RatingBar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:text="@string/review_string"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:id="@+id/activity_review_comment_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_string"
            android:inputType="text|textAutoComplete|textMultiLine"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/activity_review_button"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_string"
            android:textColor="@color/mycors_white"
            android:background="@drawable/my_buttons"
            android:layout_gravity="end"/>


    </LinearLayout>


    <ProgressBar
        android:id="@+id/activity_review_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>
</RelativeLayout>