<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MastListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="vertical"
        android:id="@+id/activity_mast_list_empty_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="No Internet Connection"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/activity_mast_list_try_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_buttons"
            android:text="Try Again"
            android:textColor="@color/mycors_white" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_mast_list_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- Masts header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/mycors_blue"
        android:padding="16dp" >

        <TextView
            android:id="@+id/list_item_mast_location_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/mycors_white"
            android:fontFamily="sans-serif-light"
            android:text="@string/location_string"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_item_mast_base_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mycors_white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:text="@string/base_string"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_item_mast_distance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mycors_white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:text="@string/distance_string"
            android:textSize="14sp" />
    </LinearLayout>
    <ListView
        android:id="@+id/masts_list_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/activity_mast_list_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>


</RelativeLayout>